# voice-agent-sip-openai-agents

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  app.py  tools.py
