[project]
name = "voice-agent-sip-openai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "fastapi>=0.136.1",
    "fastapi-cli>=0.0.24",
    "openai-agents>=0.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.38.0",
]
